--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -2,10 +2,15 @@
 
 html {
   margin: 0px;
+
+  width: 100%;
+  min-height: 100vh;
 }
 
 body {
+  position: relative;
   margin: 0px;
+  min-height: 100vh;
   
   background-color: $bg;
 }
@@ -68,7 +73,7 @@ h1 {
   margin-top: 25px;
 }
 
-h2 {
+h3 {
   font-size: 16px;
   font-family: Nunito;
   font-weight: 500;
@@ -85,7 +90,7 @@ h2 {
 .button_menu {
   width: 90%;
 
-  background-color: $blue;
+  background-color: $button_background;
   padding-left: 10%;
 
   display: flex;
@@ -100,15 +105,16 @@ h2 {
   padding-left: 20px;
   padding-right: 20px;
 
-  background-color: $blue;
+  background-color: $button_background;
+  color: $button_text;
   
   font-size: 16px;
   font-family: Nunito;
 }
 
 .button_menu button:hover {
-  background-color: $subtitle;
-  color: $bg;
+  background-color: $button_hover_background;
+  color: $button_text_hover;
   // font-weight: 700;
   cursor: pointer;
 }
@@ -117,6 +123,53 @@ h2 {
   width: 80%;
   margin-left: 10%;
   margin-top: 20px;
-  height: 100px;
-  background-color: red;
+  padding-bottom: 150px;
+}
+
+footer{
+    width:100%;
+    height: 100px;
+
+    position: absolute;
+    left: 0;
+    bottom: 0; 
+
+    background-color: $blue;
+
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+    gap: 60px;
+
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+footer h3 {
+  color: $fg;
+  font-weight: 800;
+
+  margin: 0px;
+  padding: 0px;
+  padding-bottom: 10px;
+}
+
+footer input {
+  padding-left: 25px;
+  background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat left;
+  background-size: 20px;
+
+  background-color: $bg;
+
+  width: 300px;
+  height: 25px;
+
+  border: none;
+  border: 1px solid $subtitle;
+}
+
+.foot_contact {
+  font-family: Nunito;
+  font-size: 13px;
+  color: $fg;
 }
