--- a/src/stylesheets/colors_fonts.scss
+++ b/src/stylesheets/colors_fonts.scss
@@ -1,10 +1,16 @@
 $bg: #F0EBF4;
 $fg: #252029;
 
-$subtitle: #3D6373;
-
 $purple: #B39BC8;
 $blue: #A1C3D1;
+
+$subtitle: #3D6373;
+
+$button_text: $fg;
+$button_background: $blue;
+$button_text_hover: $bg;
+$button_hover_background: $subtitle;
+
 
 @font-face {
   font-family: Nunito;
