--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Koło Naukowe Matematyków Teoretyków</title>
-    <link rel="icon" href="../assets/img/logo/logo.png" type="image/icon type">
+    <link rel="icon" href="assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="stylesheets/basic-style.css">
 
@@ -17,7 +17,7 @@
     <div class="main_header">
 
       <div class="left_header">
-        <img src="../assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
+        <img src="assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
           <h1>Koło Naukowe Matematyków Teoretyków</h1>
           <h3>Uniwersytetu Wrocławskiego</h3>
@@ -25,8 +25,8 @@
       </div>
 
       <div class="right_header">
-        <img src="../assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
-        <img src="../assets/img/calendar.svg">
+        <img src="assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
+        <img src="assets/img/calendar.svg">
       </div>
 
     </div>
