--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block moreCSS %}
+<link rel="stylesheet" href="stylesheets/basic-style.css">
 <link rel="stylesheet" href="stylesheets/news.css">
 {% endblock %}
 
