--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block moreCSS %}
+<link rel="stylesheet" href="../../stylesheets/basic-style.css">
 {% endblock %}
 
 {% block mainText %}
