--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -53,7 +53,8 @@
         <h3>Dane kontaktowe</h3>
         pl. Grunwaldzki 2<br>
         50-384 Wrocław<br>
-        POLSKA
+        POLSKA<br>
+        <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
       </div>
     </footer>
   </body>
