added-knmt-logo

--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -52,7 +52,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  justify-items: flex-end;
   align-items: center;
   gap: 10px;
 }
