--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,8 +25,12 @@
       </div>
 
       <div class="right_header">
-        <img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
-        <img src="/knmt-website/assets/img/calendar.svg">
+        <input type="text" id="search" name="search" value placeholder="Szukaj">
+        <div>
+          <img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
+          <img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
+          <img src="/knmt-website/assets/img/calendar.svg">
+        </div>
       </div>
 
     </div>
