--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,12 +25,12 @@
       </div>
 
       <div class="right_header">
-        <input type="text" id="search" name="search" value placeholder="Szukaj">
-        <div>
+        <div class="icon-holder">
           <img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
           <img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
           <img src="/knmt-website/assets/img/calendar.svg">
         </div>
+        <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
       </div>
 
     </div>
@@ -51,7 +51,7 @@
     <footer>
       <div class="foot_search">
         <h3>Wyszukaj</h3>
-        <input type="text" id="search" name="search" value placeholder="Szukaj">
+        <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
       </div>
       <div class="foot_contact">
         <h3>Dane kontaktowe</h3>
