--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="right_header">
-        <div class="icon-holder">
+        <div class="menu_icon_holder">
           <img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
           <img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
           <img src="/knmt-website/assets/img/calendar.svg">
