--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -65,7 +65,7 @@ body {
   width: 300px;
   display:flex;
   flex-direction:row;
-  justify-items: space-around;
+  justify-items: center;
 }
 
 h1 {
