--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -37,6 +37,7 @@
     <div class="button_menu">
       <button onclick="location.href='/knmt-website/'">Aktualności</button>
       <button onclick="location.href='/knmt-website/info.html'">Informacje</button>
+      <button onclick="location.href='/knmt-website/calendar.html'">Kalendarz</button>
       <button onclick="location.href='/knmt-website/join.html'">Dołącz</button>
       <button onclick="location.href='/knmt-website/wss.html'">Wrocławskie Spotkanie Szkockie</button>
     </div>
