--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -66,6 +66,8 @@ body {
   display:flex;
   flex-direction:row;
   justify-items: flex-end;
+  align-items: flex-end;
+  align-content: flex-end;
   gap: 20px;
 }
 
