--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,12 +25,12 @@
       </div>
 
       <div class="right_header">
-        <div class="menu_icon_holder">
-          <img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
-          <img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
-          <img src="/knmt-website/assets/img/calendar.svg">
-        </div>
         <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
+        <div class="menu_icon_holder">
+          <div><img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
+          <div><img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
+          <div><img src="/knmt-website/assets/img/calendar.svg"></div>
+        </div>
       </div>
 
     </div>
