--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Koło Naukowe Matematyków Teoretyków</title>
-    <link rel="icon" href="/knmt-website/assets/img/logo/logo.png" type="image/icon type">
+    <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
-    <link rel="stylesheet" href="/knmt-website/stylesheets/basic-style.css">
+    <link rel="stylesheet" href="/stylesheets/basic-style.css">
 
     {% block moreCSS %}
     {% endblock %}
@@ -17,7 +17,7 @@
     <div class="main_header">
 
       <div class="left_header">
-        <img src="/knmt-website/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
+        <img src="/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
           <h1>Koło Naukowe Matematyków Teoretyków</h1>
           <h3>Uniwersytetu Wrocławskiego</h3>
@@ -27,19 +27,19 @@
       <div class="right_header">
         <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
         <div class="menu_icon_holder">
-          <div><img src="/knmt-website/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
-          <div><img src="/knmt-website/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
-          <div><img src="/knmt-website/assets/img/calendar.svg"></div>
+          <div><img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
+          <div><img src="/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
+          <div><img src="/assets/img/calendar.svg"></div>
         </div>
       </div>
 
     </div>
     <div class="button_menu">
-      <button onclick="location.href='/knmt-website/'">Aktualności</button>
-      <button onclick="location.href='/knmt-website/info.html'">Informacje</button>
-      <button onclick="location.href='/knmt-website/calendar.html'">Kalendarz</button>
-      <button onclick="location.href='/knmt-website/join.html'">Dołącz</button>
-      <button onclick="location.href='/knmt-website/wss.html'">Wrocławskie Spotkanie Szkockie</button>
+      <button onclick="location.href='/'">Aktualności</button>
+      <button onclick="location.href='/info.html'">Informacje</button>
+      <button onclick="location.href='/calendar.html'">Kalendarz</button>
+      <button onclick="location.href='/join.html'">Dołącz</button>
+      <button onclick="location.href='/wss.html'">Wrocławskie Spotkanie Szkockie</button>
     </div>
 
     <div class="main_container">
