--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,12 +24,14 @@
         </div>
       </div>
 
+      <img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')">
+      
       <div class="right_header">
         <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
         <div class="menu_icon_holder">
-          <div><img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
           <div><img src="/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')"></div>
           <div><img src="/assets/img/calendar.svg"></div>
+          <div><a href="">Dane kontaktowe</a></div>
         </div>
       </div>
 
