--- a/src/stylesheets/footer_style.scss
+++ b/src/stylesheets/footer_style.scss
@@ -12,10 +12,10 @@ footer{
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
 
+    margin-bottom: 0px;
     padding-bottom: 0px;
     padding-top: 10px;
 }
@@ -48,6 +48,10 @@ footer h3 {
   width: 100%;
 
   margin-bottom: 0px;
+  padding: 0px;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   background-color: $purple;
   display: flex;
