conditional base tag

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koło Naukowe Matematyków Teoretyków</title>
+      {% if github %}
+        <title>xd</title>
+      {% else %}
+
+      <title>Koło Naukowe Matematyków Teoretyków</title>
+      {% endif %}
     <link rel="icon" href="/knmt-website/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/knmt-website/stylesheets/basic-style.css">
