--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,8 @@
 
 {% block mainText %}
 
+<div class="news_container">
+
 <div class="post_board">
 
 {% for p in posts %}
@@ -22,6 +24,8 @@
 </div>
 
 <div class="side_bar">
+</div>
+
 </div>
 
 {% endblock %}
