--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
 
 {% for p in posts %}
 <div class="post_box">
-  <img src="{{ p.preview_image }}" class="post_img" />
+  <img src="{{ p.preview_image }}" class="post_img" onclick="location.href='{{ p.path }}'" />
   <div class="post_info">
     <div class="post_title" onclick="location.href='{{ p.path }}'">{{ p.title }}</div>
     <div class="post_date_author">{{ p.date }} {{ p.author }}</div>
