--- a/src/stylesheets/news.scss
+++ b/src/stylesheets/news.scss
@@ -6,7 +6,9 @@
   display: flex;
   flex-direction: row;
 
-  min-height: 150px;
+  gap: 20px;
+
+  min-height: 200px;
 }
 
 .post_info {
@@ -44,14 +46,33 @@
 
 .post_board {
   width: 60%;
-  background-color: red;
 
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  // background-color: red;
+
+}
+
+.post_img {
+  width: 250px;
+  height: 200px;
+
+  object-fit: cover;
+
+  cursor: pointer;
+}
+
+.news_container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .side_bar {
   height: 100px;
-  background-color: green;
+  // background-color: green;
 
-  width: 30%;
-  margin-left: 10%;
+  width: 35%;
+  margin-left: 5%;
 }
