--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -58,5 +58,9 @@ a {
   margin-left: 10%;
   margin-top: 20px;
   padding-bottom: 200px;
+
+  font-family: Nunito;
+  font-size: 16px;
+  color: $fg;
 }
 
