--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      {% if github %}
-      <base ahref="/knmt-website">
-      {% endif %}
-
-      <title>Koło Naukowe Matematyków Teoretyków</title>
+    <title>Koło Naukowe Matematyków Teoretyków</title>
     <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
@@ -45,6 +41,7 @@
       <button onclick="location.href='/info.html'">Informacje</button>
       <button onclick="location.href='/calendar.html'">Kalendarz</button>
       <button onclick="location.href='/join.html'">Dołącz</button>
+      <button onclick="location.href='/photos.html'">Zdjęcia</button>
       <button onclick="location.href='/wss.html'">Wrocławskie Spotkanie Szkockie</button>
     </div>
 
