--- a/src/stylesheets/photos.scss
+++ b/src/stylesheets/photos.scss
@@ -21,3 +21,13 @@
 .album a {
   font-size: 20px;
 }
+
+.photo_container {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  gap: 20px;
+}
