--- a/src/stylesheets/post.scss
+++ b/src/stylesheets/post.scss
@@ -21,3 +21,19 @@ h2 {
   color: $purple;
   font-weight: 800;
 }
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td {
+  font-size: 16px;
+  margin-top: 10px;
+  padding-left: 5px;
+}
+
+th {
+  text-align: left;
+  font-size: 16px;
+} 
