--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -1,26 +1,45 @@
 {% extends "base.html" %}
 
 {% block moreCSS %}
-<link rel="stylesheet" href="/stylesheets/post.css">
+<link rel="stylesheet" href="stylesheets/post.css">
 {% endblock %}
 
 {% block mainText %}
 
-<h2>Kontakt</h2>
-          
-pl. Grunwaldzki 2<br>
-50-384 Wrocław<br>
-POLSKA<br>
-<a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
+<div class="row_100">
 
-<h2>Zarząd koła</h2>
 
-<span class="acc">Przewodniczący:</span> {{ p.prezes }}<br/>
+  <div>
+    <h2>Zarząd koła</h2>
 
-<span class="acc">Wice-przewodniczący:</span> {{ p.wice }}<br/>
+    <table>
+      <tr>
+        <th>Przewodniczący:</th>
+        <td>{{ p.prezes }}</td>
+      </tr>
+      <tr>
+        <th>Wice-przewodniczący:</th>
+        <td>{{ p.wice }}</td>
+      </tr>
+      <tr>
+        <th>Sekretarz:</th>
+        <td>{{ p.sekretarz }}</td>
+      </tr>
+      <tr>
+        <th>Skarbnik:</th>
+        <td>{{ p.skarbnik }}</td>
+      </tr>
+    </table>
+  </div>
 
-<span class="acc">Sekretarz:</span> {{ p.sekretarz }}<br/>
-
-<span class="acc">Skarbnik:</span> {{ p.skarbnik }}<br/>
+  <div style="margin-left: 60px;">
+    <h2>Kontakt</h2>
+            
+    pl. Grunwaldzki 2<br>
+    50-384 Wrocław<br>
+    POLSKA<br>
+    <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
+  </div>
+</div>
 
 {% endblock %}
