--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -1,13 +1,32 @@
 {% extends "base.html" %}
 
 {% block moreCSS %}
+<style>
+table {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+
+td, th {
+  padding: 0;
+  margin: 0;
+}
+
+th {
+  text-align: left;
+  padding-right: 10px !important;
+}
+
+a {
+  font-size: 16px !important;
+}
+</style>
 {% endblock %}
 
 {% block mainText %}
 
-<div class="row_100">
-
-
+<div class="flexrow_100" style="gap: 60px;">
   <div>
     <h2>Zarząd koła</h2>
 
@@ -31,13 +50,14 @@
     </table>
   </div>
 
-  <div style="margin-left: 60px;">
+  <div>
     <h2>Kontakt</h2>
-            
-    pl. Grunwaldzki 2<br>
-    50-384 Wrocław<br>
-    POLSKA<br>
-    <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
+    <table> 
+      <tr><td>pl. Grunwaldzki 2</td></tr>
+      <tr><td>50-384 Wrocław</td></tr>
+      <tr><td>POLSKA</td></tr>
+      <tr><td><a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a></td></tr>
+    </table>
   </div>
 </div>
 
