--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,19 @@
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
 
+    <!-- <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
+
+    <script>
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
+      }
+    };
+    </script>
+    <script id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+
     {% block moreCSS %}
     {% endblock %}
 
