--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -61,6 +61,6 @@ a {
   </div>
 </div>
 
-<embed src="/content/statut.pdf" width="100%" height="1000px" type="application/pdf">
+<embed src="/content/statut.pdf" width="100%" height="1000px" type="application/pdf" style="margin-top:40px;">
 
 {% endblock %}
