--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -91,7 +91,7 @@
         </div>
         <div class="www_auth">
           <a href="https://github.com/Sileanth" class="auth_name">Łukasz Magnuszewski</a> <br/>
-          <a href="mailto:@gmail.com">historyk2002@gmail.com</a>
+          <a href="mailto:lukasz.magnuszewski@gmail.com">lukasz.magnuszewski@gmail.com</a>
         </div>
       </div>
     </footer>
