--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -7,6 +7,13 @@ html {
   min-height: 100vh;
   
   font-family: Nunito;
+
+
+  // background-color: $subtitle;
+
+  background-image: linear-gradient(green, white);
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
 }
 
 body {
