--- a/src/stylesheets/basic-style.scss
+++ b/src/stylesheets/basic-style.scss
@@ -9,11 +9,11 @@ html {
   font-family: Nunito;
 
 
-  // background-color: $subtitle;
-
-  background-image: linear-gradient(green, white);
-  background-size: 100% 50%;
-  background-repeat: no-repeat;
+  background-color: $subtitle;
+  //
+  // background-image: linear-gradient(green, white);
+  // background-size: 100% 50%;
+  // background-repeat: no-repeat;
 }
 
 body {
