--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -52,7 +52,7 @@
     <div class="button_menu">
       <button onclick="location.href='/'">Aktualności</button>
       <button onclick="location.href='/info'">Informacje</button>
-      <button onclick="location.href='/calendar.html'">Kalendarz</button>
+      <button onclick="location.href='/calendar'">Wydarzenia</button>
       <button onclick="location.href='/join.html'">Dołącz</button>
       <button onclick="location.href='/content/photos'">Zdjęcia</button>
       <button onclick="location.href='/books'">Biblioteczka</button>
