--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,7 +26,13 @@
 </div>
 
 <div class="side_bar">
-  tutaj będzie kalendarz
+    <iframe src="https://calendar.google.com/calendar/embed?src=en.polish%23holiday%40group.v.calendar.google.com&ctz=Europe%2FWarsaw" 
+      style="border: 0" 
+      width="300" 
+      height="300" 
+      frameborder="0" 
+      scrolling="no"
+      ></iframe>
 </div>
 
 </div>
