--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,7 +34,7 @@
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj" />
 
           <img src="/assets/img/facebook.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
-          <img src="/assets/img/calendar.svg" />
+          <img src="/assets/img/calendar.svg" onclick="window.open('/calendar')" />
         </div>
 
       <div class="left_header">
