--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,7 @@
   <body>
     <div class="main_header">
         <div class="search_contact">
-          <a href="/info.html">dane kontaktowe</a>
+          <a href="/info">dane kontaktowe</a>
 
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj" />
 
