--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -57,7 +57,7 @@
       <button onclick="location.href='/content/photos'">Zdjęcia</button>
       <button onclick="location.href='/books'">Biblioteczka</button>
       <button onclick="location.href='/wss.html'">Wrocławskie Spotkanie Szkockie</button>
-      <button onclick="location.href='content/bedlewo.html'">Baby Steps</button>
+      <button onclick="location.href='content/bedlewo'">Baby Steps</button>
     </div>
 
     <div class="main_container">
