--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,13 +26,7 @@
 </div>
 
 <div class="side_bar">
-    <iframe src="https://calendar.google.com/calendar/embed?src=en.polish%23holiday%40group.v.calendar.google.com&ctz=Europe%2FWarsaw" 
-      style="border: 0" 
-      width="300" 
-      height="300" 
-      frameborder="0" 
-      scrolling="no"
-      ></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FWarsaw&showPrint=0&src=a25tdC53bWlpLnV3ckBnbWFpbC5jb20&src=ZW4ucG9saXNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%230B8043" style="border:solid 1px #777" width="300" height="300" frameborder="0" scrolling="no"></iframe>
 </div>
 
 </div>
