--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,11 +24,15 @@
 {% endfor %}
 
 <div class="flexrow_100">
+  {% if {{ prev }} %}
   <a href="{{ prev }}">prev</a>
+  {% endif %}
   {% for p in pages %}
   <a href="{{ p.url }}">{{ p.number }}</a>
   {% endfor %}
+  {% if {{ nxt }} %}
   <a href="{{ nxt }}">next</a>
+  {% endif %}
 </div>
 
 </div>
