--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -5,6 +5,8 @@
 
 {% block mainText %}
 
+<a onclick="history.back()">Powrót</a>
+
 <h1>{{ f.title }}</h1>
 {% if f.author %}
   <h2>{{ f.author }}</h2>
