--- a/src/templates/wss/base-wss.html
+++ b/src/templates/wss/base-wss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koło Naukowe Matematyków Teoretyków</title>
+    <title>Wrocławskie Spotkania Szkockie</title>
     <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
@@ -40,8 +40,8 @@
       <div class="left_header">
         <img src="/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
-          <h1>Koło Naukowe Matematyków Teoretyków</h1>
-          <h3>Uniwersytetu Wrocławskiego</h3>
+          <h1>Wrocławskie Spotkania Szkockie</h1>
+          <h3>Organizowane przez KNMT UWr</h3>
         </div>
       </div>
 
@@ -50,14 +50,10 @@
 
     </div>
     <div class="button_menu">
-      <button onclick="location.href='/'">Aktualności</button>
-      <button onclick="location.href='/info'">Informacje</button>
-      <button onclick="location.href='/calendar'">Wydarzenia</button>
-      <button onclick="location.href='/join.html'">Dołącz</button>
-      <button onclick="location.href='/content/photos'">Zdjęcia</button>
-      <button onclick="location.href='/books'">Biblioteczka</button>
-      <button onclick="location.href='/wss'">Wrocławskie Spotkanie Szkockie</button>
-      <button onclick="location.href='content/bedlewo'">Baby Steps</button>
+      <button onclick="location.href='/'">Informacje</button>
+      <button onclick="location.href='/calendar'">Rejestracja</button>
+      <button onclick="location.href='/content/photos'">Program konferencji</button>
+      <button onclick="location.href='/books'">KNMT</button>
     </div>
 
     <div class="main_container">
